<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/prayer_fajr"
                android:src="@drawable/fajr" />

            <TextView
                android:id="@+id/fajr_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/prayer_fajr"
                android:textColor="?android:colorBackground"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/fajr_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nullTime"
                android:textAlignment="center"
                android:textColor="?android:colorBackground"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/prayer_sunrise"
                android:src="@drawable/duha" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/prayer_sunrise"
                android:textColor="?android:colorBackground"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/sunrise_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nullTime"
                android:textAlignment="center"
                android:textColor="?android:colorBackground"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/prayer_dhuhr"
                android:src="@drawable/dhuhr" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/prayer_dhuhr"
                android:textColor="?android:colorBackground"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/dhuhr_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nullTime"
                android:textAlignment="center"
                android:textColor="?android:colorBackground"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/prayer_asr"
                android:src="@drawable/asr" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/prayer_asr"
                android:textColor="?android:colorBackground"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/asr_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nullTime"
                android:textAlignment="center"
                android:textColor="?android:colorBackground"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/prayer_maghrib"
                android:src="@drawable/maghrib" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/prayer_maghrib"
                android:textColor="?android:colorBackground"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/maghrib_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nullTime"
                android:textAlignment="center"
                android:textColor="?android:colorBackground"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/prayer_isha"
                android:src="@drawable/isha" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/prayer_isha"
                android:textColor="?android:colorBackground"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/isha_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nullTime"
                android:textAlignment="center"
                android:textColor="?android:colorBackground"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
